# clickfix

./: .gitignore  README.md  generate_cert.sh  link  pyproject.toml  server.py  test
config/: config.yaml  main.yaml
config/lures/: browser_update.yaml  captcha.yaml  cloudflare_captcha.yaml  coupon_captcha.yaml  error_handler.yaml  fake_update.yaml  flash_sale.yaml  microsoft_alert.yaml  prize_winner.yaml  security_alert.yaml  software_update.yaml
dav/: install.sct  proof.txt
payload/: payload.txt
payloads/: default.js  default.ps1
static/: khaosat.html  old_onboard_template.html  onboarding_template.html
templates/: chatbot_onboarding.html
web/: __init__.py  server.py
web/templates/: admin.html  admin_login.html
web/templates/lures/: browser_update.html  captcha.html  cloudflare_captcha.html  coupon_captcha.html  error_handler.html  flash_sale.html  microsoft_alert.html  prize_winner.html  security_alert.html  software_update.html
