[project]
name = "clickfix-demo"
version = "0.1.0"
description = "ClickFix - Dynamic lure web server for payload delivery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "wsgidav>=4.3.4",
    "a2wsgi>=1.10.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[tool.hatch.build.targets.sdist]
include = [
    "/web",
    "/config",
    "/payloads",
]
